@@ -1,15 +1,19 @@
-.spec
-Makefile
+aclocal.m4
+autom4te.cache
 config.h
+config.h.in
 config.log
 config.status
+configure
+.deps
+Makefile
+Makefile.in
 modulecmd
 modules.log
 modules.lsm
 modules.sum
-stamp-h
-stamp-h.in
-stamp-h1
 site.exp
-autom4te.cache
-.deps
+.spec
+stamp-h
+stamp-h1
+stamp-h.in
