@@ -1,3 +1,4 @@
 Makefile
+Makefile.in
 module.1
 modulefile.4
