@@ -1,3 +1,4 @@
 Makefile
+Makefile.in
 add.modules
 mkroot
