@@ -1,12 +1,14 @@
 *.3
-.spec
-Makefile
+autom4te.cache
 config.h
 config.log
 config.status
-stamp-h
-stamp-h.in
-stamp-h1
-site.exp
-autom4te.cache
+configure
 .deps
+Makefile
+Makefile.in
+site.exp
+.spec
+stamp-h
+stamp-h1
+stamp-h.in
