@@ -1,5 +1,6 @@
 *.o
 *.x
 Makefile
+Makefile.in
 autoscan.log
 .deps
