@@ -1,4 +1,5 @@
 Makefile
+Makefile.in
 dot
 module-cvs
 module-info
