@@ -1,4 +1,14 @@
 2002-09-12  R.K. Owen	<rk@owen.sj.ca.us>
+	* .cvsignore: Ignore autogenerated files.
+	* doc/.cvsignore: Ignore autogenerated files.
+	* etc/.cvsignore: Ignore autogenerated files.
+	* ext/.cvsignore: Ignore autogenerated files.
+	* lib/.cvsignore: Ignore autogenerated files.
+	* lib/tests/.cvsignore: Ignore autogenerated files.
+	* modulefiles/.cvsignore: Ignore autogenerated files.
+	* lib/tests/Makefile.am: Tweeked for autoreconf
+
+2002-09-12  R.K. Owen	<rk@owen.sj.ca.us>
 	* README: Updated the anonymous CVS invocation.
 	* lib/aclocal.m4: Deleted auto* generated file.
 	* lib/configure.ac: Tweeked to autoreconf
